fix: row overflow - overflow to edge of wrapper container

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,6 +1,6 @@
 .buttonRow {
   white-space: nowrap;
   overflow-y: auto;
-  padding: 15px 0px;
-  
+  padding: 24px;
+  margin: 0px -22px -24px -22px;
 }
